// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderSearchContainer allows the user to clear the query and suggestions by clicking on the clear button 1`] = `
<Connect(HeaderSearchContainer)>
  <HeaderSearchContainer
    activeSuggestion={
      Object {
        "index": -1,
      }
    }
    displayQuery="dijk"
    isDatasetView={false}
    isMapActive={false}
    numberOfSuggestions={8}
    onCleanDatasetOverview={[Function]}
    onDataSearch={[Function]}
    onDatasetSearch={[Function]}
    onGetSuggestions={[Function]}
    onSuggestionActivate={[Function]}
    openDataSuggestion={[Function]}
    openDatasetSuggestion={[Function]}
    pageName=""
    prefillQuery=""
    suggestions={
      Array [
        Object {
          "content": Array [
            Object {
              "category": "Straatnamen",
              "index": 0,
              "label": "Dijkbraak",
              "uri": "bag/openbareruimte/03630000001528/",
            },
            Object {
              "category": "Straatnamen",
              "index": 1,
              "label": "Dijkdwarsstraat",
              "uri": "bag/openbareruimte/03630000001970/",
            },
            Object {
              "category": "Straatnamen",
              "index": 2,
              "label": "Dijkgraafplein",
              "uri": "bag/openbareruimte/03630000003257/",
            },
          ],
          "label": "Straatnamen",
        },
        Object {
          "content": Array [
            Object {
              "category": "Gebieden",
              "index": 3,
              "label": "Hoge Dijk (buurt)",
              "uri": "gebieden/buurt/03630000000491/",
            },
          ],
          "label": "Gebieden",
        },
        Object {
          "content": Array [
            Object {
              "category": "Monumenten",
              "index": 4,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
            },
            Object {
              "category": "Monumenten",
              "index": 5,
              "label": "Dijkstraat 49",
              "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
            },
            Object {
              "category": "Monumenten",
              "index": 6,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
            },
          ],
          "label": "Monumenten",
        },
        Object {
          "content": Array [
            Object {
              "category": "Datasets",
              "index": 7,
              "label": "Registratie actueel hoogtebestand Nederland (AHN)",
              "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
            },
          ],
          "label": "Datasets",
        },
      ]
    }
    typedQuery="dijk"
  >
    <AutoSuggest
      activeSuggestion={
        Object {
          "index": -1,
        }
      }
      highlightQuery="dijk"
      legendTitle="Data zoeken"
      numberOfSuggestions={8}
      onSubmit={[Function]}
      onSuggestionActivate={[Function]}
      onSuggestionSelection={[Function]}
      onTextInput={[Function]}
      placeHolder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
      query="dijk"
      queryFromUrl=""
      suggestions={
        Array [
          Object {
            "content": Array [
              Object {
                "category": "Straatnamen",
                "index": 0,
                "label": "Dijkbraak",
                "uri": "bag/openbareruimte/03630000001528/",
              },
              Object {
                "category": "Straatnamen",
                "index": 1,
                "label": "Dijkdwarsstraat",
                "uri": "bag/openbareruimte/03630000001970/",
              },
              Object {
                "category": "Straatnamen",
                "index": 2,
                "label": "Dijkgraafplein",
                "uri": "bag/openbareruimte/03630000003257/",
              },
            ],
            "label": "Straatnamen",
          },
          Object {
            "content": Array [
              Object {
                "category": "Gebieden",
                "index": 3,
                "label": "Hoge Dijk (buurt)",
                "uri": "gebieden/buurt/03630000000491/",
              },
            ],
            "label": "Gebieden",
          },
          Object {
            "content": Array [
              Object {
                "category": "Monumenten",
                "index": 4,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
              },
              Object {
                "category": "Monumenten",
                "index": 5,
                "label": "Dijkstraat 49",
                "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
              },
              Object {
                "category": "Monumenten",
                "index": 6,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
              },
            ],
            "label": "Monumenten",
          },
          Object {
            "content": Array [
              Object {
                "category": "Datasets",
                "index": 7,
                "label": "Registratie actueel hoogtebestand Nederland (AHN)",
                "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
              },
            ],
            "label": "Datasets",
          },
        ]
      }
    >
      <form
        className="auto-suggest
          auto-suggest__backdrop"
        onSubmit={[Function]}
      >
        <fieldset>
          <legend
            className="u-sr-only"
          >
            Data zoeken
          </legend>
          <div
            className="auto-suggest-container"
          >
            <label
              className="u-sr-only"
              htmlFor="auto-suggest__input"
            >
              zoektekst
            </label>
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              autoFocus="true"
              className="auto-suggest__input"
              id="auto-suggest__input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
              spellCheck="false"
              type="text"
              value="dijk"
            />
            <button
              className="qa-search-form__clear auto-suggest__clear"
              onClick={[Function]}
              title="Wis zoektekst"
              type="button"
            >
              <span
                className="u-sr-only"
              >
                Wis zoektekst
              </span>
            </button>
          </div>
          <div
            className="auto-suggest__dropdown"
          >
            <h3
              className="auto-suggest__tip"
            >
              Enkele suggesties
            </h3>
            <AutoSuggestCategory
              activeSuggestion={
                Object {
                  "index": -1,
                }
              }
              category={
                Object {
                  "content": Array [
                    Object {
                      "category": "Straatnamen",
                      "index": 0,
                      "label": "Dijkbraak",
                      "uri": "bag/openbareruimte/03630000001528/",
                    },
                    Object {
                      "category": "Straatnamen",
                      "index": 1,
                      "label": "Dijkdwarsstraat",
                      "uri": "bag/openbareruimte/03630000001970/",
                    },
                    Object {
                      "category": "Straatnamen",
                      "index": 2,
                      "label": "Dijkgraafplein",
                      "uri": "bag/openbareruimte/03630000003257/",
                    },
                  ],
                  "label": "Straatnamen",
                }
              }
              key="Straatnamen"
              onSuggestionSelection={[Function]}
              query="dijk"
            >
              <div
                className="auto-suggest__dropdown-category"
              >
                <h4
                  className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
                >
                  Straatnamen
                </h4>
                <ul>
                  <AutoSuggestItem
                    content="Dijkbraak"
                    isActive={false}
                    key="Dijkbraak0"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span>braak",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                  <AutoSuggestItem
                    content="Dijkdwarsstraat"
                    isActive={false}
                    key="Dijkdwarsstraat1"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span>dwarsstraat",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                  <AutoSuggestItem
                    content="Dijkgraafplein"
                    isActive={false}
                    key="Dijkgraafplein2"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span>graafplein",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                </ul>
              </div>
            </AutoSuggestCategory>
            <AutoSuggestCategory
              activeSuggestion={
                Object {
                  "index": -1,
                }
              }
              category={
                Object {
                  "content": Array [
                    Object {
                      "category": "Gebieden",
                      "index": 3,
                      "label": "Hoge Dijk (buurt)",
                      "uri": "gebieden/buurt/03630000000491/",
                    },
                  ],
                  "label": "Gebieden",
                }
              }
              key="Gebieden"
              onSuggestionSelection={[Function]}
              query="dijk"
            >
              <div
                className="auto-suggest__dropdown-category"
              >
                <h4
                  className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
                >
                  Gebieden
                </h4>
                <ul>
                  <AutoSuggestItem
                    content="Hoge Dijk (buurt)"
                    isActive={false}
                    key="Hoge Dijk (buurt)3"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "Hoge <span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span> (buurt)",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                </ul>
              </div>
            </AutoSuggestCategory>
            <AutoSuggestCategory
              activeSuggestion={
                Object {
                  "index": -1,
                }
              }
              category={
                Object {
                  "content": Array [
                    Object {
                      "category": "Monumenten",
                      "index": 4,
                      "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                      "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
                    },
                    Object {
                      "category": "Monumenten",
                      "index": 5,
                      "label": "Dijkstraat 49",
                      "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
                    },
                    Object {
                      "category": "Monumenten",
                      "index": 6,
                      "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                      "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
                    },
                  ],
                  "label": "Monumenten",
                }
              }
              key="Monumenten"
              onSuggestionSelection={[Function]}
              query="dijk"
            >
              <div
                className="auto-suggest__dropdown-category"
              >
                <h4
                  className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
                >
                  Monumenten
                </h4>
                <ul>
                  <AutoSuggestItem
                    content="DIJKLICHAAM SPAARNDAMMERDIJK"
                    isActive={false}
                    key="DIJKLICHAAM SPAARNDAMMERDIJK4"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">DIJK</span>LICHAAM SPAARNDAMMER<span class=\\"auto-suggest__dropdown__highlight\\">DIJK</span>",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                  <AutoSuggestItem
                    content="Dijkstraat 49"
                    isActive={false}
                    key="Dijkstraat 495"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span>straat 49",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                  <AutoSuggestItem
                    content="DIJKLICHAAM SPAARNDAMMERDIJK"
                    isActive={false}
                    key="DIJKLICHAAM SPAARNDAMMERDIJK6"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">DIJK</span>LICHAAM SPAARNDAMMER<span class=\\"auto-suggest__dropdown__highlight\\">DIJK</span>",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                </ul>
              </div>
            </AutoSuggestCategory>
            <AutoSuggestCategory
              activeSuggestion={
                Object {
                  "index": -1,
                }
              }
              category={
                Object {
                  "content": Array [
                    Object {
                      "category": "Datasets",
                      "index": 7,
                      "label": "Registratie actueel hoogtebestand Nederland (AHN)",
                      "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
                    },
                  ],
                  "label": "Datasets",
                }
              }
              key="Datasets"
              onSuggestionSelection={[Function]}
              query="dijk"
            >
              <div
                className="auto-suggest__dropdown-category"
              >
                <h4
                  className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
                >
                  Datasets
                </h4>
                <ul>
                  <AutoSuggestItem
                    content="Registratie actueel hoogtebestand Nederland (AHN)"
                    isActive={false}
                    key="Registratie actueel hoogtebestand Nederland (AHN)7"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "Registratie actueel hoogtebestand Nederland (AHN)",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                </ul>
              </div>
            </AutoSuggestCategory>
          </div>
          <button
            className="auto-suggest__submit qa-search-form-submit"
            disabled={false}
            title="Zoeken"
            type="submit"
          >
            <span
              className="u-sr-only"
            >
              Zoeken
            </span>
          </button>
        </fieldset>
      </form>
    </AutoSuggest>
  </HeaderSearchContainer>
</Connect(HeaderSearchContainer)>
`;

exports[`HeaderSearchContainer allows the user to clear the query and suggestions by clicking on the clear button 2`] = `
Object {
  "autoSuggest": Object {
    "count": 8,
    "displayQuery": "dijk",
    "error": "",
    "isLoading": false,
    "suggestions": Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dijkbraak",
            "uri": "bag/openbareruimte/03630000001528/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Dijkdwarsstraat",
            "uri": "bag/openbareruimte/03630000001970/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Dijkgraafplein",
            "uri": "bag/openbareruimte/03630000003257/",
          },
        ],
        "label": "Straatnamen",
      },
      Object {
        "content": Array [
          Object {
            "category": "Gebieden",
            "index": 3,
            "label": "Hoge Dijk (buurt)",
            "uri": "gebieden/buurt/03630000000491/",
          },
        ],
        "label": "Gebieden",
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
            "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Dijkstraat 49",
            "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
          },
          Object {
            "category": "Monumenten",
            "index": 6,
            "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
            "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
          },
        ],
        "label": "Monumenten",
      },
      Object {
        "content": Array [
          Object {
            "category": "Datasets",
            "index": 7,
            "label": "Registratie actueel hoogtebestand Nederland (AHN)",
            "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
          },
        ],
        "label": "Datasets",
      },
    ],
    "typedQuery": "dijk",
  },
}
`;

exports[`HeaderSearchContainer allows the user to clear the query and suggestions by clicking on the clear button 3`] = `
<Connect(HeaderSearchContainer)>
  <HeaderSearchContainer
    activeSuggestion={
      Object {
        "index": -1,
      }
    }
    displayQuery=""
    isDatasetView={false}
    isMapActive={false}
    numberOfSuggestions={0}
    onCleanDatasetOverview={[Function]}
    onDataSearch={[Function]}
    onDatasetSearch={[Function]}
    onGetSuggestions={[Function]}
    onSuggestionActivate={[Function]}
    openDataSuggestion={[Function]}
    openDatasetSuggestion={[Function]}
    pageName=""
    prefillQuery=""
    suggestions={Array []}
    typedQuery=""
  >
    <AutoSuggest
      activeSuggestion={
        Object {
          "index": -1,
        }
      }
      highlightQuery=""
      legendTitle="Data zoeken"
      numberOfSuggestions={0}
      onSubmit={[Function]}
      onSuggestionActivate={[Function]}
      onSuggestionSelection={[Function]}
      onTextInput={[Function]}
      placeHolder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
      query=""
      queryFromUrl=""
      suggestions={Array []}
    >
      <form
        className="auto-suggest
          "
        onSubmit={[Function]}
      >
        <fieldset>
          <legend
            className="u-sr-only"
          >
            Data zoeken
          </legend>
          <div
            className="auto-suggest-container"
          >
            <label
              className="u-sr-only"
              htmlFor="auto-suggest__input"
            >
              zoektekst
            </label>
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              autoFocus="true"
              className="auto-suggest__input"
              id="auto-suggest__input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
              spellCheck="false"
              type="text"
              value=""
            />
          </div>
          <button
            className="auto-suggest__submit qa-search-form-submit"
            disabled={true}
            title="Zoeken"
            type="submit"
          >
            <span
              className="u-sr-only"
            >
              Zoeken
            </span>
          </button>
        </fieldset>
      </form>
    </AutoSuggest>
  </HeaderSearchContainer>
</Connect(HeaderSearchContainer)>
`;

exports[`HeaderSearchContainer allows the user to clear the query and suggestions by clicking on the clear button 4`] = `
Object {
  "autoSuggest": Object {
    "activeSuggestion": Object {
      "index": -1,
    },
    "count": undefined,
    "displayQuery": "",
    "error": "",
    "isLoading": false,
    "suggestions": undefined,
    "typedQuery": "",
  },
}
`;

exports[`HeaderSearchContainer auto-suggest dropdown allows the user click on a suggestion 1`] = `
<Connect(HeaderSearchContainer)>
  <HeaderSearchContainer
    activeSuggestion={
      Object {
        "index": -1,
      }
    }
    displayQuery=""
    isDatasetView={false}
    isMapActive={false}
    numberOfSuggestions={0}
    onCleanDatasetOverview={[Function]}
    onDatasetSearch={[Function]}
    onDetailLoad={[Function]}
    onGetSuggestions={[Function]}
    onSearch={[Function]}
    onSuggestionActivate={[Function]}
    pageName=""
    prefillQuery=""
    suggestions={
      Array [
        Object {
          "content": Array [
            Object {
              "category": "Straatnamen",
              "index": 0,
              "label": "Dijkbraak",
              "uri": "bag/openbareruimte/03630000001528/",
            },
            Object {
              "category": "Straatnamen",
              "index": 1,
              "label": "Dijkdwarsstraat",
              "uri": "bag/openbareruimte/03630000001970/",
            },
            Object {
              "category": "Straatnamen",
              "index": 2,
              "label": "Dijkgraafplein",
              "uri": "bag/openbareruimte/03630000003257/",
            },
          ],
          "label": "Straatnamen",
        },
        Object {
          "content": Array [
            Object {
              "category": "Gebieden",
              "index": 3,
              "label": "Hoge Dijk (buurt)",
              "uri": "gebieden/buurt/03630000000491/",
            },
          ],
          "label": "Gebieden",
        },
        Object {
          "content": Array [
            Object {
              "category": "Monumenten",
              "index": 4,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
            },
            Object {
              "category": "Monumenten",
              "index": 5,
              "label": "Dijkstraat 49",
              "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
            },
            Object {
              "category": "Monumenten",
              "index": 6,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
            },
          ],
          "label": "Monumenten",
        },
        Object {
          "content": Array [
            Object {
              "category": "Datasets",
              "index": 7,
              "label": "Registratie actueel hoogtebestand Nederland (AHN)",
              "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
            },
          ],
          "label": "Datasets",
        },
      ]
    }
    typedQuery=""
  >
    <AutoSuggest
      activeSuggestion={
        Object {
          "index": -1,
        }
      }
      highlightQuery=""
      legendTitle="Data zoeken"
      numberOfSuggestions={0}
      onSubmit={[Function]}
      onSuggestionActivate={[Function]}
      onSuggestionSelection={[Function]}
      onTextInput={[Function]}
      placeHolder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
      query=""
      queryFromUrl=""
      suggestions={
        Array [
          Object {
            "content": Array [
              Object {
                "category": "Straatnamen",
                "index": 0,
                "label": "Dijkbraak",
                "uri": "bag/openbareruimte/03630000001528/",
              },
              Object {
                "category": "Straatnamen",
                "index": 1,
                "label": "Dijkdwarsstraat",
                "uri": "bag/openbareruimte/03630000001970/",
              },
              Object {
                "category": "Straatnamen",
                "index": 2,
                "label": "Dijkgraafplein",
                "uri": "bag/openbareruimte/03630000003257/",
              },
            ],
            "label": "Straatnamen",
          },
          Object {
            "content": Array [
              Object {
                "category": "Gebieden",
                "index": 3,
                "label": "Hoge Dijk (buurt)",
                "uri": "gebieden/buurt/03630000000491/",
              },
            ],
            "label": "Gebieden",
          },
          Object {
            "content": Array [
              Object {
                "category": "Monumenten",
                "index": 4,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
              },
              Object {
                "category": "Monumenten",
                "index": 5,
                "label": "Dijkstraat 49",
                "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
              },
              Object {
                "category": "Monumenten",
                "index": 6,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
              },
            ],
            "label": "Monumenten",
          },
          Object {
            "content": Array [
              Object {
                "category": "Datasets",
                "index": 7,
                "label": "Registratie actueel hoogtebestand Nederland (AHN)",
                "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
              },
            ],
            "label": "Datasets",
          },
        ]
      }
    >
      <form
        className="auto-suggest
          "
        onSubmit={[Function]}
      >
        <fieldset>
          <legend
            className="u-sr-only"
          >
            legendTitle
          </legend>
          <div
            className="auto-suggest-container"
          >
            <label
              className="u-sr-only"
              htmlFor="auto-suggest__input"
            >
              zoektekst
            </label>
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              autoFocus="true"
              className="auto-suggest__input"
              id="auto-suggest__input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
              spellCheck="false"
              type="text"
              value=""
            />
          </div>
          <button
            className="auto-suggest__submit qa-search-form-submit"
            disabled={true}
            title="Zoeken"
            type="submit"
          >
            <span
              className="u-sr-only"
            >
              Zoeken
            </span>
          </button>
        </fieldset>
      </form>
    </AutoSuggest>
  </HeaderSearchContainer>
</Connect(HeaderSearchContainer)>
`;

exports[`HeaderSearchContainer auto-suggest dropdown allows the user to dismiss the suggestions when blurring the input field 1`] = `
<Connect(HeaderSearchContainer)>
  <HeaderSearchContainer
    activeSuggestion={
      Object {
        "index": -1,
      }
    }
    displayQuery="dijk"
    isDatasetView={false}
    isMapActive={false}
    numberOfSuggestions={8}
    onCleanDatasetOverview={[Function]}
    onDataSearch={[Function]}
    onDatasetSearch={[Function]}
    onGetSuggestions={[Function]}
    onSuggestionActivate={[Function]}
    openDataSuggestion={[Function]}
    openDatasetSuggestion={[Function]}
    pageName=""
    prefillQuery=""
    suggestions={
      Array [
        Object {
          "content": Array [
            Object {
              "category": "Straatnamen",
              "index": 0,
              "label": "Dijkbraak",
              "uri": "bag/openbareruimte/03630000001528/",
            },
            Object {
              "category": "Straatnamen",
              "index": 1,
              "label": "Dijkdwarsstraat",
              "uri": "bag/openbareruimte/03630000001970/",
            },
            Object {
              "category": "Straatnamen",
              "index": 2,
              "label": "Dijkgraafplein",
              "uri": "bag/openbareruimte/03630000003257/",
            },
          ],
          "label": "Straatnamen",
        },
        Object {
          "content": Array [
            Object {
              "category": "Gebieden",
              "index": 3,
              "label": "Hoge Dijk (buurt)",
              "uri": "gebieden/buurt/03630000000491/",
            },
          ],
          "label": "Gebieden",
        },
        Object {
          "content": Array [
            Object {
              "category": "Monumenten",
              "index": 4,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
            },
            Object {
              "category": "Monumenten",
              "index": 5,
              "label": "Dijkstraat 49",
              "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
            },
            Object {
              "category": "Monumenten",
              "index": 6,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
            },
          ],
          "label": "Monumenten",
        },
        Object {
          "content": Array [
            Object {
              "category": "Datasets",
              "index": 7,
              "label": "Registratie actueel hoogtebestand Nederland (AHN)",
              "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
            },
          ],
          "label": "Datasets",
        },
      ]
    }
    typedQuery="dijk"
  >
    <AutoSuggest
      activeSuggestion={
        Object {
          "index": -1,
        }
      }
      highlightQuery="dijk"
      legendTitle="Data zoeken"
      numberOfSuggestions={8}
      onSubmit={[Function]}
      onSuggestionActivate={[Function]}
      onSuggestionSelection={[Function]}
      onTextInput={[Function]}
      placeHolder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
      query="dijk"
      queryFromUrl=""
      suggestions={
        Array [
          Object {
            "content": Array [
              Object {
                "category": "Straatnamen",
                "index": 0,
                "label": "Dijkbraak",
                "uri": "bag/openbareruimte/03630000001528/",
              },
              Object {
                "category": "Straatnamen",
                "index": 1,
                "label": "Dijkdwarsstraat",
                "uri": "bag/openbareruimte/03630000001970/",
              },
              Object {
                "category": "Straatnamen",
                "index": 2,
                "label": "Dijkgraafplein",
                "uri": "bag/openbareruimte/03630000003257/",
              },
            ],
            "label": "Straatnamen",
          },
          Object {
            "content": Array [
              Object {
                "category": "Gebieden",
                "index": 3,
                "label": "Hoge Dijk (buurt)",
                "uri": "gebieden/buurt/03630000000491/",
              },
            ],
            "label": "Gebieden",
          },
          Object {
            "content": Array [
              Object {
                "category": "Monumenten",
                "index": 4,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
              },
              Object {
                "category": "Monumenten",
                "index": 5,
                "label": "Dijkstraat 49",
                "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
              },
              Object {
                "category": "Monumenten",
                "index": 6,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
              },
            ],
            "label": "Monumenten",
          },
          Object {
            "content": Array [
              Object {
                "category": "Datasets",
                "index": 7,
                "label": "Registratie actueel hoogtebestand Nederland (AHN)",
                "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
              },
            ],
            "label": "Datasets",
          },
        ]
      }
    >
      <form
        className="auto-suggest
          "
        onSubmit={[Function]}
      >
        <fieldset>
          <legend
            className="u-sr-only"
          >
            Data zoeken
          </legend>
          <div
            className="auto-suggest-container"
          >
            <label
              className="u-sr-only"
              htmlFor="auto-suggest__input"
            >
              zoektekst
            </label>
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              autoFocus="true"
              className="auto-suggest__input"
              id="auto-suggest__input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
              spellCheck="false"
              type="text"
              value="dijk"
            />
            <button
              className="qa-search-form__clear auto-suggest__clear"
              onClick={[Function]}
              title="Wis zoektekst"
              type="button"
            >
              <span
                className="u-sr-only"
              >
                Wis zoektekst
              </span>
            </button>
          </div>
          <button
            className="auto-suggest__submit qa-search-form-submit"
            disabled={false}
            title="Zoeken"
            type="submit"
          >
            <span
              className="u-sr-only"
            >
              Zoeken
            </span>
          </button>
        </fieldset>
      </form>
    </AutoSuggest>
  </HeaderSearchContainer>
</Connect(HeaderSearchContainer)>
`;

exports[`HeaderSearchContainer auto-suggest dropdown allows the user to use the keyboard to dismiss the suggestions 1`] = `
<Connect(HeaderSearchContainer)>
  <HeaderSearchContainer
    activeSuggestion={
      Object {
        "index": -1,
      }
    }
    displayQuery=""
    isDatasetView={false}
    isMapActive={false}
    numberOfSuggestions={8}
    onCleanDatasetOverview={[Function]}
    onDataSearch={[Function]}
    onDatasetSearch={[Function]}
    onGetSuggestions={[Function]}
    onSuggestionActivate={[Function]}
    openDataSuggestion={[Function]}
    openDatasetSuggestion={[Function]}
    pageName=""
    prefillQuery=""
    suggestions={
      Array [
        Object {
          "content": Array [
            Object {
              "category": "Straatnamen",
              "index": 0,
              "label": "Dijkbraak",
              "uri": "bag/openbareruimte/03630000001528/",
            },
            Object {
              "category": "Straatnamen",
              "index": 1,
              "label": "Dijkdwarsstraat",
              "uri": "bag/openbareruimte/03630000001970/",
            },
            Object {
              "category": "Straatnamen",
              "index": 2,
              "label": "Dijkgraafplein",
              "uri": "bag/openbareruimte/03630000003257/",
            },
          ],
          "label": "Straatnamen",
        },
        Object {
          "content": Array [
            Object {
              "category": "Gebieden",
              "index": 3,
              "label": "Hoge Dijk (buurt)",
              "uri": "gebieden/buurt/03630000000491/",
            },
          ],
          "label": "Gebieden",
        },
        Object {
          "content": Array [
            Object {
              "category": "Monumenten",
              "index": 4,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
            },
            Object {
              "category": "Monumenten",
              "index": 5,
              "label": "Dijkstraat 49",
              "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
            },
            Object {
              "category": "Monumenten",
              "index": 6,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
            },
          ],
          "label": "Monumenten",
        },
        Object {
          "content": Array [
            Object {
              "category": "Datasets",
              "index": 7,
              "label": "Registratie actueel hoogtebestand Nederland (AHN)",
              "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
            },
          ],
          "label": "Datasets",
        },
      ]
    }
    typedQuery="dijk"
  >
    <AutoSuggest
      activeSuggestion={
        Object {
          "index": -1,
        }
      }
      highlightQuery="dijk"
      legendTitle="Data zoeken"
      numberOfSuggestions={8}
      onSubmit={[Function]}
      onSuggestionActivate={[Function]}
      onSuggestionSelection={[Function]}
      onTextInput={[Function]}
      placeHolder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
      query="dijk"
      queryFromUrl=""
      suggestions={
        Array [
          Object {
            "content": Array [
              Object {
                "category": "Straatnamen",
                "index": 0,
                "label": "Dijkbraak",
                "uri": "bag/openbareruimte/03630000001528/",
              },
              Object {
                "category": "Straatnamen",
                "index": 1,
                "label": "Dijkdwarsstraat",
                "uri": "bag/openbareruimte/03630000001970/",
              },
              Object {
                "category": "Straatnamen",
                "index": 2,
                "label": "Dijkgraafplein",
                "uri": "bag/openbareruimte/03630000003257/",
              },
            ],
            "label": "Straatnamen",
          },
          Object {
            "content": Array [
              Object {
                "category": "Gebieden",
                "index": 3,
                "label": "Hoge Dijk (buurt)",
                "uri": "gebieden/buurt/03630000000491/",
              },
            ],
            "label": "Gebieden",
          },
          Object {
            "content": Array [
              Object {
                "category": "Monumenten",
                "index": 4,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
              },
              Object {
                "category": "Monumenten",
                "index": 5,
                "label": "Dijkstraat 49",
                "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
              },
              Object {
                "category": "Monumenten",
                "index": 6,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
              },
            ],
            "label": "Monumenten",
          },
          Object {
            "content": Array [
              Object {
                "category": "Datasets",
                "index": 7,
                "label": "Registratie actueel hoogtebestand Nederland (AHN)",
                "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
              },
            ],
            "label": "Datasets",
          },
        ]
      }
    >
      <form
        className="auto-suggest
          "
        onSubmit={[Function]}
      >
        <fieldset>
          <legend
            className="u-sr-only"
          >
            Data zoeken
          </legend>
          <div
            className="auto-suggest-container"
          >
            <label
              className="u-sr-only"
              htmlFor="auto-suggest__input"
            >
              zoektekst
            </label>
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              autoFocus="true"
              className="auto-suggest__input"
              id="auto-suggest__input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
              spellCheck="false"
              type="text"
              value="dijk"
            />
            <button
              className="qa-search-form__clear auto-suggest__clear"
              onClick={[Function]}
              title="Wis zoektekst"
              type="button"
            >
              <span
                className="u-sr-only"
              >
                Wis zoektekst
              </span>
            </button>
          </div>
          <button
            className="auto-suggest__submit qa-search-form-submit"
            disabled={false}
            title="Zoeken"
            type="submit"
          >
            <span
              className="u-sr-only"
            >
              Zoeken
            </span>
          </button>
        </fieldset>
      </form>
    </AutoSuggest>
  </HeaderSearchContainer>
</Connect(HeaderSearchContainer)>
`;

exports[`HeaderSearchContainer auto-suggest dropdown allows the user to use the keyboard to navigate and select suggestions 1`] = `
<Connect(HeaderSearchContainer)>
  <HeaderSearchContainer
    activeSuggestion={
      Object {
        "category": "Straatnamen",
        "index": 0,
        "label": "Dijkbraak",
        "uri": "bag/openbareruimte/03630000001528/",
      }
    }
    displayQuery="Dijkbraak"
    isDatasetView={false}
    isMapActive={false}
    numberOfSuggestions={8}
    onCleanDatasetOverview={[Function]}
    onDataSearch={[Function]}
    onDatasetSearch={[Function]}
    onGetSuggestions={[Function]}
    onSuggestionActivate={[Function]}
    openDataSuggestion={[Function]}
    openDatasetSuggestion={[Function]}
    pageName=""
    prefillQuery=""
    suggestions={
      Array [
        Object {
          "content": Array [
            Object {
              "category": "Straatnamen",
              "index": 0,
              "label": "Dijkbraak",
              "uri": "bag/openbareruimte/03630000001528/",
            },
            Object {
              "category": "Straatnamen",
              "index": 1,
              "label": "Dijkdwarsstraat",
              "uri": "bag/openbareruimte/03630000001970/",
            },
            Object {
              "category": "Straatnamen",
              "index": 2,
              "label": "Dijkgraafplein",
              "uri": "bag/openbareruimte/03630000003257/",
            },
          ],
          "label": "Straatnamen",
        },
        Object {
          "content": Array [
            Object {
              "category": "Gebieden",
              "index": 3,
              "label": "Hoge Dijk (buurt)",
              "uri": "gebieden/buurt/03630000000491/",
            },
          ],
          "label": "Gebieden",
        },
        Object {
          "content": Array [
            Object {
              "category": "Monumenten",
              "index": 4,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
            },
            Object {
              "category": "Monumenten",
              "index": 5,
              "label": "Dijkstraat 49",
              "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
            },
            Object {
              "category": "Monumenten",
              "index": 6,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
            },
          ],
          "label": "Monumenten",
        },
        Object {
          "content": Array [
            Object {
              "category": "Datasets",
              "index": 7,
              "label": "Registratie actueel hoogtebestand Nederland (AHN)",
              "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
            },
          ],
          "label": "Datasets",
        },
      ]
    }
    typedQuery="dijk"
  >
    <AutoSuggest
      activeSuggestion={
        Object {
          "category": "Straatnamen",
          "index": 0,
          "label": "Dijkbraak",
          "uri": "bag/openbareruimte/03630000001528/",
        }
      }
      highlightQuery="dijk"
      legendTitle="Data zoeken"
      numberOfSuggestions={8}
      onSubmit={[Function]}
      onSuggestionActivate={[Function]}
      onSuggestionSelection={[Function]}
      onTextInput={[Function]}
      placeHolder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
      query="Dijkbraak"
      queryFromUrl=""
      suggestions={
        Array [
          Object {
            "content": Array [
              Object {
                "category": "Straatnamen",
                "index": 0,
                "label": "Dijkbraak",
                "uri": "bag/openbareruimte/03630000001528/",
              },
              Object {
                "category": "Straatnamen",
                "index": 1,
                "label": "Dijkdwarsstraat",
                "uri": "bag/openbareruimte/03630000001970/",
              },
              Object {
                "category": "Straatnamen",
                "index": 2,
                "label": "Dijkgraafplein",
                "uri": "bag/openbareruimte/03630000003257/",
              },
            ],
            "label": "Straatnamen",
          },
          Object {
            "content": Array [
              Object {
                "category": "Gebieden",
                "index": 3,
                "label": "Hoge Dijk (buurt)",
                "uri": "gebieden/buurt/03630000000491/",
              },
            ],
            "label": "Gebieden",
          },
          Object {
            "content": Array [
              Object {
                "category": "Monumenten",
                "index": 4,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
              },
              Object {
                "category": "Monumenten",
                "index": 5,
                "label": "Dijkstraat 49",
                "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
              },
              Object {
                "category": "Monumenten",
                "index": 6,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
              },
            ],
            "label": "Monumenten",
          },
          Object {
            "content": Array [
              Object {
                "category": "Datasets",
                "index": 7,
                "label": "Registratie actueel hoogtebestand Nederland (AHN)",
                "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
              },
            ],
            "label": "Datasets",
          },
        ]
      }
    >
      <form
        className="auto-suggest
          auto-suggest__backdrop"
        onSubmit={[Function]}
      >
        <fieldset>
          <legend
            className="u-sr-only"
          >
            Data zoeken
          </legend>
          <div
            className="auto-suggest-container"
          >
            <label
              className="u-sr-only"
              htmlFor="auto-suggest__input"
            >
              zoektekst
            </label>
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              autoFocus="true"
              className="auto-suggest__input"
              id="auto-suggest__input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
              spellCheck="false"
              type="text"
              value="Dijkbraak"
            />
            <button
              className="qa-search-form__clear auto-suggest__clear"
              onClick={[Function]}
              title="Wis zoektekst"
              type="button"
            >
              <span
                className="u-sr-only"
              >
                Wis zoektekst
              </span>
            </button>
          </div>
          <div
            className="auto-suggest__dropdown"
          >
            <h3
              className="auto-suggest__tip"
            >
              Enkele suggesties
            </h3>
            <AutoSuggestCategory
              activeSuggestion={
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dijkbraak",
                  "uri": "bag/openbareruimte/03630000001528/",
                }
              }
              category={
                Object {
                  "content": Array [
                    Object {
                      "category": "Straatnamen",
                      "index": 0,
                      "label": "Dijkbraak",
                      "uri": "bag/openbareruimte/03630000001528/",
                    },
                    Object {
                      "category": "Straatnamen",
                      "index": 1,
                      "label": "Dijkdwarsstraat",
                      "uri": "bag/openbareruimte/03630000001970/",
                    },
                    Object {
                      "category": "Straatnamen",
                      "index": 2,
                      "label": "Dijkgraafplein",
                      "uri": "bag/openbareruimte/03630000003257/",
                    },
                  ],
                  "label": "Straatnamen",
                }
              }
              key="Straatnamen"
              onSuggestionSelection={[Function]}
              query="dijk"
            >
              <div
                className="auto-suggest__dropdown-category"
              >
                <h4
                  className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
                >
                  Straatnamen
                </h4>
                <ul>
                  <AutoSuggestItem
                    content="Dijkbraak"
                    isActive={true}
                    key="Dijkbraak0"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--active
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span>braak",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                  <AutoSuggestItem
                    content="Dijkdwarsstraat"
                    isActive={false}
                    key="Dijkdwarsstraat1"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span>dwarsstraat",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                  <AutoSuggestItem
                    content="Dijkgraafplein"
                    isActive={false}
                    key="Dijkgraafplein2"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span>graafplein",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                </ul>
              </div>
            </AutoSuggestCategory>
            <AutoSuggestCategory
              activeSuggestion={
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dijkbraak",
                  "uri": "bag/openbareruimte/03630000001528/",
                }
              }
              category={
                Object {
                  "content": Array [
                    Object {
                      "category": "Gebieden",
                      "index": 3,
                      "label": "Hoge Dijk (buurt)",
                      "uri": "gebieden/buurt/03630000000491/",
                    },
                  ],
                  "label": "Gebieden",
                }
              }
              key="Gebieden"
              onSuggestionSelection={[Function]}
              query="dijk"
            >
              <div
                className="auto-suggest__dropdown-category"
              >
                <h4
                  className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
                >
                  Gebieden
                </h4>
                <ul>
                  <AutoSuggestItem
                    content="Hoge Dijk (buurt)"
                    isActive={false}
                    key="Hoge Dijk (buurt)3"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "Hoge <span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span> (buurt)",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                </ul>
              </div>
            </AutoSuggestCategory>
            <AutoSuggestCategory
              activeSuggestion={
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dijkbraak",
                  "uri": "bag/openbareruimte/03630000001528/",
                }
              }
              category={
                Object {
                  "content": Array [
                    Object {
                      "category": "Monumenten",
                      "index": 4,
                      "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                      "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
                    },
                    Object {
                      "category": "Monumenten",
                      "index": 5,
                      "label": "Dijkstraat 49",
                      "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
                    },
                    Object {
                      "category": "Monumenten",
                      "index": 6,
                      "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                      "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
                    },
                  ],
                  "label": "Monumenten",
                }
              }
              key="Monumenten"
              onSuggestionSelection={[Function]}
              query="dijk"
            >
              <div
                className="auto-suggest__dropdown-category"
              >
                <h4
                  className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
                >
                  Monumenten
                </h4>
                <ul>
                  <AutoSuggestItem
                    content="DIJKLICHAAM SPAARNDAMMERDIJK"
                    isActive={false}
                    key="DIJKLICHAAM SPAARNDAMMERDIJK4"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">DIJK</span>LICHAAM SPAARNDAMMER<span class=\\"auto-suggest__dropdown__highlight\\">DIJK</span>",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                  <AutoSuggestItem
                    content="Dijkstraat 49"
                    isActive={false}
                    key="Dijkstraat 495"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dijk</span>straat 49",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                  <AutoSuggestItem
                    content="DIJKLICHAAM SPAARNDAMMERDIJK"
                    isActive={false}
                    key="DIJKLICHAAM SPAARNDAMMERDIJK6"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">DIJK</span>LICHAAM SPAARNDAMMER<span class=\\"auto-suggest__dropdown__highlight\\">DIJK</span>",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                </ul>
              </div>
            </AutoSuggestCategory>
            <AutoSuggestCategory
              activeSuggestion={
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dijkbraak",
                  "uri": "bag/openbareruimte/03630000001528/",
                }
              }
              category={
                Object {
                  "content": Array [
                    Object {
                      "category": "Datasets",
                      "index": 7,
                      "label": "Registratie actueel hoogtebestand Nederland (AHN)",
                      "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
                    },
                  ],
                  "label": "Datasets",
                }
              }
              key="Datasets"
              onSuggestionSelection={[Function]}
              query="dijk"
            >
              <div
                className="auto-suggest__dropdown-category"
              >
                <h4
                  className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
                >
                  Datasets
                </h4>
                <ul>
                  <AutoSuggestItem
                    content="Registratie actueel hoogtebestand Nederland (AHN)"
                    isActive={false}
                    key="Registratie actueel hoogtebestand Nederland (AHN)7"
                    onSuggestionSelection={[Function]}
                    query="dijk"
                  >
                    <li>
                      <button
                        className="
          auto-suggest__dropdown-item
          auto-suggest__dropdown-item--inactive
        "
                        onClick={[Function]}
                        type="button"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="icon"
                          />
                          <span
                            dangerouslySetInnerHTML={
                              Object {
                                "__html": "Registratie actueel hoogtebestand Nederland (AHN)",
                              }
                            }
                          />
                        </div>
                      </button>
                    </li>
                  </AutoSuggestItem>
                </ul>
              </div>
            </AutoSuggestCategory>
          </div>
          <button
            className="auto-suggest__submit qa-search-form-submit"
            disabled={false}
            title="Zoeken"
            type="submit"
          >
            <span
              className="u-sr-only"
            >
              Zoeken
            </span>
          </button>
        </fieldset>
      </form>
    </AutoSuggest>
  </HeaderSearchContainer>
</Connect(HeaderSearchContainer)>
`;

exports[`HeaderSearchContainer auto-suggest dropdown allows the user to use the keyboard to navigate and select suggestions 2`] = `
<Connect(HeaderSearchContainer)>
  <HeaderSearchContainer
    activeSuggestion={
      Object {
        "index": -1,
      }
    }
    displayQuery=""
    isDatasetView={false}
    isMapActive={false}
    numberOfSuggestions={0}
    onCleanDatasetOverview={[Function]}
    onDatasetSearch={[Function]}
    onDetailLoad={[Function]}
    onGetSuggestions={[Function]}
    onSearch={[Function]}
    onSuggestionActivate={[Function]}
    pageName=""
    prefillQuery=""
    suggestions={
      Array [
        Object {
          "content": Array [
            Object {
              "category": "Straatnamen",
              "index": 0,
              "label": "Dijkbraak",
              "uri": "bag/openbareruimte/03630000001528/",
            },
            Object {
              "category": "Straatnamen",
              "index": 1,
              "label": "Dijkdwarsstraat",
              "uri": "bag/openbareruimte/03630000001970/",
            },
            Object {
              "category": "Straatnamen",
              "index": 2,
              "label": "Dijkgraafplein",
              "uri": "bag/openbareruimte/03630000003257/",
            },
          ],
          "label": "Straatnamen",
        },
        Object {
          "content": Array [
            Object {
              "category": "Gebieden",
              "index": 3,
              "label": "Hoge Dijk (buurt)",
              "uri": "gebieden/buurt/03630000000491/",
            },
          ],
          "label": "Gebieden",
        },
        Object {
          "content": Array [
            Object {
              "category": "Monumenten",
              "index": 4,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
            },
            Object {
              "category": "Monumenten",
              "index": 5,
              "label": "Dijkstraat 49",
              "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
            },
            Object {
              "category": "Monumenten",
              "index": 6,
              "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
              "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
            },
          ],
          "label": "Monumenten",
        },
        Object {
          "content": Array [
            Object {
              "category": "Datasets",
              "index": 7,
              "label": "Registratie actueel hoogtebestand Nederland (AHN)",
              "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
            },
          ],
          "label": "Datasets",
        },
      ]
    }
    typedQuery=""
  >
    <AutoSuggest
      activeSuggestion={
        Object {
          "index": -1,
        }
      }
      highlightQuery=""
      legendTitle="Data zoeken"
      numberOfSuggestions={0}
      onSubmit={[Function]}
      onSuggestionActivate={[Function]}
      onSuggestionSelection={[Function]}
      onTextInput={[Function]}
      placeHolder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
      query=""
      queryFromUrl=""
      suggestions={
        Array [
          Object {
            "content": Array [
              Object {
                "category": "Straatnamen",
                "index": 0,
                "label": "Dijkbraak",
                "uri": "bag/openbareruimte/03630000001528/",
              },
              Object {
                "category": "Straatnamen",
                "index": 1,
                "label": "Dijkdwarsstraat",
                "uri": "bag/openbareruimte/03630000001970/",
              },
              Object {
                "category": "Straatnamen",
                "index": 2,
                "label": "Dijkgraafplein",
                "uri": "bag/openbareruimte/03630000003257/",
              },
            ],
            "label": "Straatnamen",
          },
          Object {
            "content": Array [
              Object {
                "category": "Gebieden",
                "index": 3,
                "label": "Hoge Dijk (buurt)",
                "uri": "gebieden/buurt/03630000000491/",
              },
            ],
            "label": "Gebieden",
          },
          Object {
            "content": Array [
              Object {
                "category": "Monumenten",
                "index": 4,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
              },
              Object {
                "category": "Monumenten",
                "index": 5,
                "label": "Dijkstraat 49",
                "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
              },
              Object {
                "category": "Monumenten",
                "index": 6,
                "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
                "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
              },
            ],
            "label": "Monumenten",
          },
          Object {
            "content": Array [
              Object {
                "category": "Datasets",
                "index": 7,
                "label": "Registratie actueel hoogtebestand Nederland (AHN)",
                "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
              },
            ],
            "label": "Datasets",
          },
        ]
      }
    >
      <form
        className="auto-suggest
          "
        onSubmit={[Function]}
      >
        <fieldset>
          <legend
            className="u-sr-only"
          >
            legendTitle
          </legend>
          <div
            className="auto-suggest-container"
          >
            <label
              className="u-sr-only"
              htmlFor="auto-suggest__input"
            >
              zoektekst
            </label>
            <input
              autoCapitalize="off"
              autoComplete="off"
              autoCorrect="off"
              autoFocus="true"
              className="auto-suggest__input"
              id="auto-suggest__input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Zoek data op adres, postcode, kadastrale aanduiding, etc. Of datasets op trefwoord."
              spellCheck="false"
              type="text"
              value=""
            />
          </div>
          <button
            className="auto-suggest__submit qa-search-form-submit"
            disabled={true}
            title="Zoeken"
            type="submit"
          >
            <span
              className="u-sr-only"
            >
              Zoeken
            </span>
          </button>
        </fieldset>
      </form>
    </AutoSuggest>
  </HeaderSearchContainer>
</Connect(HeaderSearchContainer)>
`;

exports[`HeaderSearchContainer gets and formats the data correctly before setting it to the state 1`] = `
Object {
  "autoSuggest": Object {
    "count": 0,
    "displayQuery": "dijk",
    "error": "",
    "isLoading": true,
    "suggestions": Array [],
    "typedQuery": "dijk",
  },
}
`;

exports[`HeaderSearchContainer gets and formats the data correctly before setting it to the state 2`] = `
Object {
  "autoSuggest": Object {
    "count": 8,
    "displayQuery": "dijk",
    "error": "",
    "isLoading": false,
    "suggestions": Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dijkbraak",
            "uri": "bag/openbareruimte/03630000001528/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Dijkdwarsstraat",
            "uri": "bag/openbareruimte/03630000001970/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Dijkgraafplein",
            "uri": "bag/openbareruimte/03630000003257/",
          },
        ],
        "label": "Straatnamen",
      },
      Object {
        "content": Array [
          Object {
            "category": "Gebieden",
            "index": 3,
            "label": "Hoge Dijk (buurt)",
            "uri": "gebieden/buurt/03630000000491/",
          },
        ],
        "label": "Gebieden",
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
            "uri": "monumenten/monumenten/1871732e-783e-4890-8759-793c1c1927af/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Dijkstraat 49",
            "uri": "monumenten/monumenten/6eaa9645-0564-4df1-82a5-4ed8659945ae/",
          },
          Object {
            "category": "Monumenten",
            "index": 6,
            "label": "DIJKLICHAAM SPAARNDAMMERDIJK",
            "uri": "monumenten/monumenten/e56dd328-0db8-4b26-be54-a51b4e752a1a/",
          },
        ],
        "label": "Monumenten",
      },
      Object {
        "content": Array [
          Object {
            "category": "Datasets",
            "index": 7,
            "label": "Registratie actueel hoogtebestand Nederland (AHN)",
            "uri": "dcatd/datasets/registratie-actueel-hoogtebestand-nederland-ahn",
          },
        ],
        "label": "Datasets",
      },
    ],
    "typedQuery": "dijk",
  },
}
`;
